# Infrared-Image-Colorization-and-Enhancement-

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
configs/: colorize.yaml  data.yaml  infer.yaml  sr.yaml
docs/: api.md  architecture.md  ps10-conformance.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: index.html
frontend/public/: frontend-index.html
frontend/public/chaturvyuha-site/: ChaturVyuha 3D.dc.html  ChaturVyuha.dc.html
frontend/src/: App.tsx  api.ts  index.css  placeholders.ts
frontend/src/components/: BeforeAfterSlider.tsx  Hero.tsx  Nav.tsx  ResultsDashboard.tsx
notebooks/: eda.ipynb
scripts/: download_landsat.py  run_smoke.sh  serve_backend.sh
src/tir/api/: jobs.py  previews.py  schemas.py  server.py
src/tir/data/: datasets.py  download.py  make_synthetic.py  patchify.py  preprocess.py  radiometric.py
src/tir/eval/: evaluate.py  metrics.py
src/tir/infer/: pipeline.py  tile_io.py
src/tir/losses/: adversarial.py  perceptual.py  physics.py  pixel.py
src/tir/models/: colorize_model.py  sr_model.py
src/tir/models/blocks/: __init__.py  common.py
src/tir/train/: train_colorize.py  train_sr.py
src/tir/utils/: config.py  geo.py  logging.py  seed.py  stack.py  viz.py
tests/: test_api.py  test_geo_io.py  test_metrics.py  test_patch_align.py  test_radiometric.py  test_synthetic_pipeline.py
